# simple_llm_service

./: README.md  docker-compose.yml  docker_running.md
backend_service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend_service/config/: settings.py
backend_service/src/: main.py
backend_service/src/api/: __init__.py  auth.py  dependencies.py  query.py
backend_service/src/core/: __init__.py  auth.py  rate_limiter.py  schemas.py
backend_service/src/db/: __init__.py  database.py
backend_service/src/models/: __init__.py  query_log.py  user.py
backend_service/src/services/: __init__.py  llm_service.py  user_service.py
backend_service/src/utils/: logger.py
backend_service/tests/: conftest.py  test_rate_limiter.py  test_user_service.py
frontend_service/: .dockerignore  .gitignore  Dockerfile  README.md  abc.md  nginx.conf  package-lock.json  package.json
frontend_service/public/: index.html
frontend_service/src/: App copy.js  App.js
